--- a/Qmos.UI/Views/Elements/Form.cshtml
+++ b/Qmos.UI/Views/Elements/Form.cshtml
@@ -2,13 +2,13 @@
 @{
     @model Qmos.UI.ViewModels.ElementViewModel
 if (Model.ID_Element == 0) {
-        ViewData["Title"] = "Crear Elemento";
+        ViewData["Title"] = "Create Element";
 
     } else {
-        ViewData["Title"] = "Modificar Elemento";
+        ViewData["Title"] = "Modify Element";
 
     }
-    ViewData["Root"] = "Elementos";
+    ViewData["Root"] = "Elements";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link rel="stylesheet" href="~/css/plugins/sweetalert/sweetalert.css">
@@ -32,8 +32,8 @@ if (Model.ID_Element == 0) {
                                 <div class="form-group">
                                     <input type="hidden" asp-for="@Model.ID_Element" />
 
-                                    <label>Nombre</label>
-                                    <input asp-for="@Model.TX_Name" type="text" placeholder="Nombre" class="form-control">
+                                    <label>Name</label>
+                                    <input asp-for="@Model.TX_Name" type="text" placeholder="Name" class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label>Url</label>
@@ -42,23 +42,23 @@ if (Model.ID_Element == 0) {
 
                                 </div>
                                 <div class="form-group">
-                                    <label>Ícono</label>
+                                    <label>Icon</label>
                                     @*<input asp-for="@Model.TX_Icon" type="text" placeholder="Icon" class="form-control">*@
-                                    <input asp-for="@Model.TX_Icon" placeholder="Ícono" class="form-control icp icp-auto iconpicker-element iconpicker-input" data-input-search="true" value="@Model.TX_Icon" type="text">
+                                    <input asp-for="@Model.TX_Icon" placeholder="Icon" class="form-control icp icp-auto iconpicker-element iconpicker-input" data-input-search="true" value="@Model.TX_Icon" type="text">
                                 </div>
                                 <div class="form-group">
-                                    <label>Elemento Padre</label>
-                                    <select asp-for="@Model.ID_ElementParent" asp-items="@Model.ListElements" class="form-control"><option value="0">Sin Elemento Padre</option></select>
+                                    <label>Parent</label>
+                                    <select asp-for="@Model.ID_ElementParent" asp-items="@Model.ListElements" class="form-control"><option value="0">No Parent Element</option></select>
                                 </div>
                                 <div class="form-group">
-                                    <label>Tipo</label>
-                                    <select asp-for="@Model.ID_Type" as asp-items="@(new SelectList(Model.ListTypes,"Value","Text"))" class="form-control"><option value="">Seleccione un tipo</option></select>
+                                    <label>Type</label>
+                                    <select asp-for="@Model.ID_Type" as asp-items="@(new SelectList(Model.ListTypes,"Value","Text"))" class="form-control"><option value="">Select a type</option></select>
                                 </div>
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group row text-center">
                                     <div class="col-lg-12">
-                                        <a asp-action="Index" class="btn btn-white"><i class="fa fa-arrow-left"></i> Regresar</a>
-                                        <button id="btn-save" class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar</button>
+                                        <a asp-action="Index" class="btn btn-white"><i class="fa fa-arrow-left"></i> Back</a>
+                                        <button id="btn-save" class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Save</button>
                                     </div>
                                 </div>
                             </form>
