--- a/Qmos.UI/Views/Elements/Index.cshtml
+++ b/Qmos.UI/Views/Elements/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     @model IEnumerable<KCI_SecureModuleCL.Models.SM_ELEMENT>
-    ViewData["Title"] = "Menú & Elementos";
-    ViewData["Root"] = "Administración";
+    ViewData["Title"] = "Menu & Elements";
+    ViewData["Root"] = "Mangement";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -19,18 +19,18 @@
                 <div class="ibox-content text-center p-md">
                     <div class="row">
                         <div class="col-lg-offset-10">
-                            <a asp-controller="Elements" asp-action="Get" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo</a>
+                            <a asp-controller="Elements" asp-action="Get" class="btn btn-success"><i class="fa fa-plus"></i> New</a>
                         </div>
                     </div>
                     <table class="table table-striped table-bordered table-hover dataTables" id="table">
                         <thead>
                             <tr>
-                                <th>Nombre</th>
+                                <th>Name</th>
                                 <th>Url</th>
-                                <th>Ícono</th>
-                                <th>Tipo</th>
+                                <th>Icon</th>
+                                <th>Type</th>
 
-                                <th class="text-center">Acciones</th>
+                                <th class="text-center">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -52,8 +52,8 @@
 
                                         <td>
                                             <div class="btn-group">
-                                                <a asp-controller="Elements" asp-action="GetUpdate" asp-route-id="@item.ID_Element" class="btn btn-primary"><i class="fa fa-edit"></i> Actualizar</a>
-                                                <a data-id="@item.ID_Element" class="btn btn-danger delete"><i class="fa fa-remove"></i> Eliminar</a>
+                                                <a asp-controller="Elements" asp-action="GetUpdate" asp-route-id="@item.ID_Element" class="btn btn-primary"><i class="fa fa-edit"></i> Update</a>
+                                                <a data-id="@item.ID_Element" class="btn btn-danger delete"><i class="fa fa-remove"></i> Remove</a>
                                             </div>
                                         </td>
                                     </tr>
