--- a/Qmos.UI/Views/Roles/Form.cshtml
+++ b/Qmos.UI/Views/Roles/Form.cshtml
@@ -2,11 +2,11 @@
 @{
     @model Qmos.UI.ViewModels.RoleViewModel
     if (Model.ID_Role == 0) {
-        ViewData["Title"] = "Crear Rol";
+        ViewData["Title"] = "Create Role";
 
     }
     else {
-        ViewData["Title"] = "Modificar Rol";
+        ViewData["Title"] = "Modify Role";
 
     }
     ViewData["Root"] = "Roles";
@@ -29,27 +29,27 @@
                                 <div class="form-group">
                                     <input type="hidden" asp-for="@Model.ID_Role" />
                                     <input type="hidden" asp-for="@Model.ID_Elements" />
-                                    <label>Rol</label>
-                                    <input asp-for="@Model.TX_Role" type="text" placeholder="Rol" class="form-control">
+                                    <label>Role</label>
+                                    <input asp-for="@Model.TX_Role" type="text" placeholder="Role" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label>Descripción</label>
-                                    <input asp-for="@Model.TX_Description" type="text" placeholder="Descripción" class="form-control">
+                                    <label>Description</label>
+                                    <input asp-for="@Model.TX_Description" type="text" placeholder="Description" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label>Aplicación</label>
-                                    <select asp-for="@Model.ID_Element" as asp-items="@(new SelectList(Model.ListAplications,"Value","Text"))" class="form-control"><option value="">Seleccione una aplicación</option></select>
+                                    <label>Application</label>
+                                    <select asp-for="@Model.ID_Element" as asp-items="@(new SelectList(Model.ListAplications,"Value","Text"))" class="form-control"><option value="">Select an application</option></select>
                                 </div>
                                 <div class="form-group justify-content-md-center" align="left">
-                                    <label class="text-bold">Visible por Cliente</label> <br/>
+                                    <label class="text-bold">Visible by Client</label> <br/>
                                     <input style="height: 20px; width: 20px; margin-top:10px" id="BO_VisibleCliente" name="BO_VisibleCliente" asp-for="BO_VisibleCliente" type="checkbox">
 
                                 </div>
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group row text-center">
                                     <div class="col-lg-12">
-                                        <a asp-action="Index" class="btn btn-white"><i class="fa fa-arrow-left"></i> Regresar</a>
-                                        <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar</button>
+                                        <a asp-action="Index" class="btn btn-white"><i class="fa fa-arrow-left"></i> Back</a>
+                                        <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Save</button>
                                     </div>
                                 </div>
                             </form>
@@ -65,7 +65,9 @@
         <div class="col-lg-offset-2 col-lg-8">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Nivel de Acceso</h5>
+                    <h5>
+                        Access level
+                    </h5>
                     <div class="ibox-tools">
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
@@ -76,8 +78,8 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div id="nestable-menu">
-                                <button type="button" data-action="expand-all" class="btn btn-white btn-sm">Expandir todo</button>
-                                <button type="button" data-action="collapse-all" class="btn btn-white btn-sm">Colapsar todo</button>
+                                <button type="button" data-action="expand-all" class="btn btn-white btn-sm">Expand all</button>
+                                <button type="button" data-action="collapse-all" class="btn btn-white btn-sm">Collapse all</button>
                             </div>
                         </div>
                     </div>
