--- a/Qmos.UI/Views/Users/Form.cshtml
+++ b/Qmos.UI/Views/Users/Form.cshtml
@@ -3,14 +3,14 @@
     @model Qmos.UI.ViewModels.UserViewModel
     @if (Model.ID_User != 0)
     {
-        ViewData["Title"] = "Modificar Usuario" +  ViewData["Customer"];
+        ViewData["Title"] = "Modify User" +  ViewData["Customer"];
     }
     else
     {
-        ViewData["Title"] = "Crear Usuario" +  ViewData["Customer"];
+        ViewData["Title"] = "Create User" +  ViewData["Customer"];
     }
 
-    ViewData["Root"] = "Usuarios";
+    ViewData["Root"] = "Users";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link rel="stylesheet" href="~/css/plugins/sweetalert/sweetalert.css">
@@ -32,7 +32,9 @@
                         <div class="col-lg-12">
                             <div class="form-group row text-left">
                                 <div class="col-lg-12">
-                                    <span class="text-danger"> *</span><span> Campos obligatorios</span>
+                                    <span class="text-danger"> *</span><span>
+    Required fields
+</span>
                                 </div>
                             </div>
                             <form asp-action="Post" role="form" method="post">
@@ -44,43 +46,53 @@
 
                                 <div class="row">
                                     <div class="form-group col-lg-3 col-md-3">
-                                        <label>Primer Nombre</label><span class="text-danger"> *</span>
-                                        <input asp-for="@Model.TX_FirstName" type="text" placeholder="Primer Nombre" class="form-control">
+                                        <label>
+                                            First name
+                                        </label><span class="text-danger"> *</span>
+                                        <input asp-for="@Model.TX_FirstName" type="text" placeholder="
+First name" class="form-control">
                                     </div>
                                     <div class="form-group col-lg-3 col-md-3">
-                                        <label>Segundo Nombre</label>
-                                        <input asp-for="@Model.TX_SecondName" type="text" placeholder="Segundo Nombre" class="form-control">
+                                        <label>
+                                            Second name
+                                        </label>
+                                        <input asp-for="@Model.TX_SecondName" type="text" placeholder="
+Second name" class="form-control">
                                     </div>
                                     <div class="form-group col-lg-3 col-md-3">
-                                        <label>Primer Apellido</label><span class="text-danger"> *</span>
-                                        <input asp-for="@Model.TX_LastName" type="text" placeholder="Primer Apellido" class="form-control">
+                                        <label>
+                                            Surname
+                                        </label><span class="text-danger"> *</span>
+                                        <input asp-for="@Model.TX_LastName" type="text" placeholder="Surname" class="form-control">
                                     </div>
                                     <div class="form-group col-lg-3 col-md-3">
-                                        <label>Segundo Apellido</label>
-                                        <input asp-for="@Model.TX_SecondLastName" type="text" placeholder="Segundo Apellido" class="form-control">
+                                        <label>
+                                            Second surname
+                                        </label>
+                                        <input asp-for="@Model.TX_SecondLastName" type="text" placeholder="Second surname" class="form-control">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-lg-6 col-md-6">
-                                        <label>Correo Electrónico</label><span class="text-danger"> *</span>
-                                        <input asp-for="@Model.TX_Email" type="email" placeholder="Correo Electrónico" class="form-control">
-                                        <span hidden id="label-useremail" class="text-danger">El correo ya existe!</span>
-                                        <span class="text-danger email-error-message" hidden>¡Introduzca un correo electrónico válido!</span>
+                                        <label> Email</label><span class="text-danger"> *</span>
+                                        <input asp-for="@Model.TX_Email" type="email" placeholder="Email" class="form-control">
+                                        <span hidden id="label-useremail" class="text-danger">The mail already exists! </span>
+                                        <span class="text-danger email-error-message" hidden>Please enter a valid email!</span>
                                     </div>
                                     <div class="form-group col-lg-6 col-md-6">
-                                        <label>Número Telefónico</label>
-                                        <input asp-for="@Model.TX_Phone" type="text" placeholder="Número Telefónico" class="form-control">
+                                        <label>Phone number</label>
+                                        <input asp-for="@Model.TX_Phone" type="text" placeholder="Phone number" class="form-control">
                                     </div>
                                 </div>
 
                                 <div class="form-group">
-                                    <label>Contraseña</label><span class="text-danger"> *</span>
-                                    <input asp-for="@Model.TX_Password" type="password" placeholder="Contraseña" class="form-control">
+                                    <label>Password</label><span class="text-danger"> *</span>
+                                    <input asp-for="@Model.TX_Password" type="password" placeholder="Password" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label>Confirmar Contraseña</label><span class="text-danger"> *</span>
-                                    <input type="password" placeholder="Confirmar Contraseña" class="form-control confirm">
-                                    <span class="text-danger password-error-message" hidden>¡Las contraseñas no coinciden! </span>
+                                    <label>Confirm Password</label><span class="text-danger"> *</span>
+                                    <input type="password" placeholder="Confirm Password" class="form-control confirm">
+                                    <span class="text-danger password-error-message" hidden>Passwords do not match! </span>
                                 </div>
 
 
@@ -88,33 +100,33 @@
                                     @if ((string)ViewData["Customer"] == "" || ViewData["Customer"] == null) { // Es SuperAdministrador
                                     <div class="form-group col-lg-6 col-md-6 LinkAdministrator">
                                         <div class="form-group">
-                                            <label>Cliente</label>
-                                            <select asp-for="TX_LinkAdministrator" asp-items="Model.ListCustomers" class="chosen-select Customers" data-placeholder="Seleccione">
-                                            <option value="0">Seleccione </option>
+                                            <label>Client</label>
+                                            <select asp-for="TX_LinkAdministrator" asp-items="Model.ListCustomers" class="chosen-select Customers" data-placeholder="Select">
+                                                <option value="0">Select </option>
                                             </select>
                                         </div>
                                     </div>
                                     }
                                     <div class="form-group col-lg-6 col-md-6">
-                                        <label>Lista de Precio Predeterminada</label>
-                                        <select class="form-control m-b chosen-select" asp-for="DfPriceList" asp-items="Model.PriceLists" data-placeholder="Seleccione ">
-                                            <option value="0">Seleccione </option>
+                                        <label>Default Price List</label>
+                                        <select class="form-control m-b chosen-select" asp-for="DfPriceList" asp-items="Model.PriceLists" data-placeholder="Select ">
+                                            <option value="0">Select </option>
                                         </select>
                                     </div>
                                 </div>
 
 
                                 <div class="form-group justify-content-md-center" align="left">
-                                    <label class="text-bold">Activo</label>
+                                    <label class="text-bold">Active </label>
                                     <input style="height: 20px; width: 20px; margin-top:10px" id="CB_Active" name="CB_Active" asp-for="BO_Active" type="checkbox">
-                                    <span hidden id="label-active" class="text-danger">El cupo para usuarios activos está completo</span>
+                                    <span hidden id="label-active" class="text-danger">The quota for active users is full</span>
                                     <br>
                                 </div>
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group row text-center">
                                     <div class="col-lg-12">
-                                        <a asp-action="Index" class="btn btn-white"><i class="fa fa-arrow-left"></i> Regresar</a>
-                                        <button id="btn-save" class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar</button>
+                                        <a asp-action="Index" class="btn btn-white"><i class="fa fa-arrow-left"></i> Back</a>
+                                        <button id="btn-save" class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Save</button>
                                     </div>
                                 </div>
                             </form>
@@ -142,15 +154,15 @@
                             <form>
                                 <input id="ID_UserR" type="hidden" value="@Model.ID_User" />
                                 <div class="col-md-4 form-group">
-                                    <label>Aplicación</label>
-                                    <select id="ID_Application" asp-items="@(new SelectList(Model.ListAplications, "Value", "Text"))" class="form-control"><option value="">Seleccione una aplicación</option></select>
+                                    <label>Application</label>
+                                    <select id="ID_Application" asp-items="@(new SelectList(Model.ListAplications, "Value", "Text"))" class="form-control"><option value="">Select an application</option></select>
                                 </div>
                                 <div class="col-md-4 form-group">
                                     <label>Roles</label>
-                                    <select id="ID_Role" class="form-control"><option value="">Seleccione un rol</option></select>
+                                    <select id="ID_Role" class="form-control"><option value="">Select a role</option></select>
                                 </div>
                                 <div class="col-md-4 form-group">
-                                    <a id="btn-save-role" class="btn btn-success"><i class="fa fa-plus"></i> Agregar</a>
+                                    <a id="btn-save-role" class="btn btn-success"><i class="fa fa-plus"></i> Add</a>
                                 </div>
                             </form>
                         </div>
