--- a/Qmos.UI/Views/Account/Login.cshtml
+++ b/Qmos.UI/Views/Account/Login.cshtml
@@ -85,24 +85,22 @@
                 </div>
                 <form asp-action="ForgotPasswordeEmail" role="form" method="post">
                     <div class="modal-body" style="background-image: url('../images/background.png'); ">
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">Enter the registered email in the system.</font></font></p>
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff"> In a few minutes you will receive a notification to reset it.</font></font></p><br />
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#000000"><b>Enter the registered email in the system.</b></font></font></p>
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#000000"><b> In a few minutes you will receive a notification to reset it.</b></font></font></p><br />
 
                         <div class="wrap-input100 validate-input m-b-10" data-validate="email is required">
-                            <input class="input100" type="text" name="useremail" id="useremail" placeholder="Correo Electrónico">
+                            <input class="input100" type="text" name="useremail" id="useremail" placeholder="Email">
                             <span class="focus-input100"></span>
                             <span class="symbol-input100">
                                 <i class="fa fa-envelope"></i>
                             </span>
                         </div>
                         <div class="container-login100-form-btn p-t-10">
-                            <input type="submit" value="Enviar Correo" class="login100-form-btn">
+                            <input type="submit" value="Send" class="login100-form-btn">
                         </div>
                     </div>
                 </form>
-                <div class="modal-footer" style="padding:8px">
-                    <button class="btn btn-primary" type="button" data-dismiss="modal">Cerrar</button>
-                </div>
+
             </div>
         </div>
     </div>
@@ -119,12 +117,12 @@
                 </div>
                 <form asp-action="ForgotPasswordeEmail" role="form" method="post">
                     <div class="modal-body" style="background-image: url('../images/background.png'); ">
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">The link to recover your password has been successfully sent to your email.</font></font></p>
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">Please check your inbox in a few minutes to reset it.</font></font></p><br />
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#000000">The link to recover your password has been successfully sent to your email.</font></font></p>
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#000000">Please check your inbox in a few minutes to reset it.</font></font></p><br />
                     </div>
                 </form>
                 <div class="modal-footer" style="padding:8px">
-                    <button class="btn btn-primary btn-ok" type="button" id="" data-dismiss="modal">Aceptar</button>
+                    <button class="btn btn-primary btn-ok" type="button" id="" data-dismiss="modal">Ok</button>
                 </div>
             </div>
         </div>
@@ -142,8 +140,8 @@
                 </div>
                 <form asp-action="ForgotPasswordeEmail" role="form" method="post">
                     <div class="modal-body" style="background-image: url('../images/background.png'); ">
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">An error occurred</font></font></p>
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">Enter the registered email in the system.</font></font></p><br />
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#000000"><b>An error occurred</b></font></font></p>
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#000000"><b>Enter the registered email in the system.</b></font></font></p><br />
                     </div>
                 </form>
                 <div class="modal-footer" style="padding:8px">
