--- a/Qmos.UI/Views/ForgotPassword/Index.cshtml
+++ b/Qmos.UI/Views/ForgotPassword/Index.cshtml
@@ -39,20 +39,20 @@
                     @if (ViewBag.ErrorMessage == null)
                     {
                         <div class="wrap-input100 validate-input m-b-10" data-validate="username is required">
-                            <input class="input100" type="password" name="initialPassword" id="initialPassword" placeholder="Contraseña">
+                            <input class="input100" type="password" name="initialPassword" id="initialPassword" placeholder="Password">
                             <span class="focus-input100"></span>
                             <span class="symbol-input100">
                                 <i class="fa fa-lock"></i>
                             </span>
                         </div>
                         <div class="wrap-input100 validate-input m-b-10 text-center">
-                            <input class="input100 confirm" type="password" name="password" id="password" placeholder="Confirmar Contraseña">
-                            <span class="text-danger password-error-message" hidden style="color:#ffffff"><strong>¡Las contraseñas no coinciden!</strong> </span>
+                            <input class="input100 confirm" type="password" name="password" id="password" placeholder="Confirm Password">
+                            <span class="text-danger password-error-message" hidden style="color:#ffffff"><strong>Passwords do not match!</strong> </span>
                             <span class="focus-input100"></span>
                             <span class="symbol-input100"><i class="fa fa-paste"></i> </span>
                         </div>
                         <div class="container-login100-form-btn p-t-10">
-                            <input type="submit" value="Actualizar Contraseña" id="btn-updatePassword" class="login100-form-btn">
+                            <input type="submit" value="Update Password" id="btn-updatePassword" class="login100-form-btn">
                         </div>
                     }
                     @if (ViewBag.ErrorMessage != null)
@@ -77,16 +77,16 @@
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title myLabelForgetPassword font-bold">Restablecimiento de contraseña</h4>
+                    <h4 class="modal-title myLabelForgetPassword font-bold">Password reset </h4>
                 </div>
                 <form asp-action="ForgotPassword" asp-controller="Account" role="form" method="post">
                     <div class="modal-body" style="background-image: url('../images/background.png'); ">
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">¡Proceso realizado con éxito!</font></font></p>
-                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">Ingrese el correo con el que accede al sistema y su nueva contraseña</font></font></p>
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff">Successful process!</font></font></p>
+                        <p class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; color:#ffffff"> Enter the email with which you access the system and your new password</font></font></p>
                     </div>
                 </form>
                 <div class="modal-footer" style="padding:8px">
-                    <button class="btn btn-primary" type="button" id="btn-login" data-dismiss="modal">Aceptar</button>
+                    <button class="btn btn-primary" type="button" id="btn-login" data-dismiss="modal">Ok</button>
                 </div>
             </div>
         </div>
